...
                android:textAlignment="center"
                android:textColor = "?android:textColorPrimary"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_CCAA"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="1" />

...
                    android:duplicateParentState="false"
                    android:text="No"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnResetearPermanentes"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:onClick="reseteaPermanentes"
                android:text="Resetear" />

            <Button
                android:id="@+id/btnGuardarPermanentes"
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:onClick="guardaPermanentes"
...
