...
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvGasolineras"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
...
